--- a/toolchain-llvm/ldflags.conf
+++ b/toolchain-llvm/ldflags.conf
@@ -19,7 +19,7 @@ LDFLAGS="-no-pie"
 #
 # This flag makes the linker bind default visibility defined symbols (or
 # functions) locally for shared code. Use -Wl,-Bsymbolic-functions when this
-# flag causes issues.
+# causes issues. Default is -Wl,-Bsymbolic-functions until further testing.
 #
 LDFLAGS="${LDFLAGS} -Wl,-Bsymbolic-functions"
 
