--- a/toolchain-llvm/cxxflags.conf
+++ b/toolchain-llvm/cxxflags.conf
@@ -1,11 +1,5 @@
-# C++ flags. These flags are used when Clang compiles C++ code. If you place
-# these in normal CFLAGS, Clang will not be able to compile test programs and
-# the configure phase will fail!
-
-# -fvisibility-inlines-hidden
-#
-#  This flag allows the compiler to make inlines hidden during compile time.
-#  When paired with -flto and -Wl,--lto-whole-program-visibility, hidden
-#  inlines become visible during LTO for better optimization.
+# Make inlines hidden during compile time. When paired with -flto and
+# -Wl,--lto-whole-program-visibility, hidden inlines become visible during LTO
+# for better optimization.
 #
 CXXFLAGS="${CFLAGS} -fvisibility-inlines-hidden"
