--- a/toolchain-llvm/llvm.conf
+++ b/toolchain-llvm/llvm.conf
@@ -1,74 +1,48 @@
-# Toolchain overrides. This section defines LLVM alternatives to GNU binutils
-# for a complete LLVM toolchain. This may help when using Clang since the LLVM
-# toolchain is more aware of Clang specific optimizations and features.
-
-# Address translator
-#
-#  This replaces GNU binutils' addr2line.
+# Replaces GNU's address translator, addr2line.
 #
 ADDR2LINE="llvm-addr2line"
 
-# Archiver
-#
-#  This replaces GNU binutils' ar. You can control its behavior with ARFLAGS,
-#  but only if it's directly called.
+# Replaces GNU's archiver, ar. You can control its behavior with ARFLAGS, but
+# only if it's directly called.
 #
 AR="llvm-ar"
 
-# Assembler
-#
-#  This replaces GNU binutils' as. Kind of.
+# Replaces GNU's assembler, as. Kind of.
 #
 AS="llvm-as"
 
-# Linker
-#
-#  This replaces GNU binutils' dynamic linker. You can control its behavior
-#  with LDFLAGS when indirectly called via the compiler. This only reports the
-#  name of the linker being used, not forcing lld over bfd. Since we set LLD as
-#  the Clang default with USE flags, this will output the proper linker used
-#  during configure phase checks.
+# Replaces GNU's linker, BFD. You can control its behavior with LDFLAGS when
+# indirectly called via the compiler. This only reports the name of the linker
+# being used, not forcing LLD over BFD. Since we set LLD as the Clang default
+# with USE flags, this will output the proper linker used during configure
+# phase checks.
 #
 LD="ld.lld"
 
-# Symbol extractor
-#
-#  This replaces GNU binutils' nm.
+# Replaces GNU's symbol extractor, nm.
 #
 NM="llvm-nm"
 
-# Object copier and translater
-#
-#  This replaces GNU binutils' objcopy.
+# Replaces GNU's object copier and translater, objcopy.
 #
 OBJCOPY="llvm-objcopy"
 
-# Object file dumper
-#
-#  This replaces GNU binutils' objdump.
+# Replaces GNU's object file dumper, objdump.
 #
 OBJDUMP="llvm-objdump"
 
-# Archive index generator
-#
-#  This replaces GNU binutils' ranlib.
+# Replaces GNU's archive index generator, ranlib.
 #
 RANLIB="llvm-ranlib"
 
-# Object reader
-#
-#  This replaces GNU binutils' readelf.
+# Replaces GNU's object reader, readelf.
 #
 READELF="llvm-readelf"
 
-# Strings printer
-#
-#  This replaces GNU binutils' strings.
+# Replaces GNU's strings printer, strings.
 #
 STRINGS="llvm-strings"
 
-# Object stripping tool
-#
-#  This replaces GNU binutils' strip.
+# Replaces GNU's Object stripping tool, strip.
 #
 STRIP="llvm-strip"
