--- a/make.conf
+++ b/make.conf
@@ -9,4 +9,4 @@ source toolchain-llvm/cxxflags.conf
 source toolchain-llvm/ldflags.conf
 source toolchain-llvm/llvm.conf
 
-# !End of overrides, your normal settings go below here!
+# End of overrides, your normal settings go below here.
