--- a/make.conf
+++ b/make.conf
@@ -1,5 +1,4 @@
-# Copy & paste this to the top of your /etc/portage/make.conf
-# 
+# Start overrides. Copy & paste this to the top of your /etc/portage/make.conf
 # Comment to disable sources you don't want to use.
 
 source toolchain-llvm/clang.conf
