--- a/toolchain-llvm/cxxflags.conf
+++ b/toolchain-llvm/cxxflags.conf
@@ -1,7 +1,7 @@
 # Optimizes based on the strict rules for overwriting polymorphic C++ and other
 # object oriented languages.
 #
-CFLAGS="${CFLAGS} -fstrict-vtable-pointers"
+CXXFLAGS="${CFLAGS} -fstrict-vtable-pointers"
 
 # Remove dead virtual functions from vtables so that CGProfile metadata gets
 # cleaned up correctly. It can only be used with full LTO because it needs to
@@ -10,7 +10,7 @@ CFLAGS="${CFLAGS} -fstrict-vtable-pointers"
 #
 # This requires -fwhole-program-vtables to function, which also requires -flto.
 #
-CFLAGS="${CFLAGS} -fvirtual-function-elimination"
+CXXFLAGS="${CFLAGS} -fvirtual-function-elimination"
 
 # Make inlines hidden during compile time. When paired with -flto and
 # -Wl,--lto-whole-program-visibility, hidden inlines become visible during LTO
