--- a/toolchain-llvm/cflags.conf
+++ b/toolchain-llvm/cflags.conf
@@ -109,6 +109,15 @@ CFLAGS="${CFLAGS} -fno-stack-protector"
 #
 CFLAGS="${CFLAGS} -fveclib=libmvec"
 
+# Remove dead virtual functions from vtables so that CGProfile metadata gets
+# cleaned up correctly. It can only be used with full LTO because it needs to
+# see every call to llvm.type.checked.load in the linkage unit, which ThinLTO
+# doesn't support currently.
+#
+# This requires -fwhole-program-vtables to function, which also requires -flto.
+#
+CXXFLAGS="${CXXFLAGS} -fvirtual-function-elimination"
+
 # Enable whole-program vtable optimizations for classes with hidden LTO
 # visibility. This flag requires -flto.
 #
