--- a/toolchain-llvm/ldflags.conf
+++ b/toolchain-llvm/ldflags.conf
@@ -1,5 +1,5 @@
 # Bind default visibility defined symbols (or functions) locally for shared
-# code. Use -Wl,-Bsymbolic-functions when this causes issues.
+# code. Use -Wl,-Bsymbolic-non-weak-functions when this causes issues.
 #
 LDFLAGS="-Wl,-Bsymbolic-functions"
 
@@ -41,9 +41,3 @@ LDFLAGS="${LDFLAGS} -Wl,--icf=all"
 # more aggressive.
 #
 LDFLAGS="${LDFLAGS} -Wl,--lto-O3"
-
-# Exposes all code that was marked hidden while compiling during link-time.
-# With whole program visibility, Clang can make more efficient optimizations
-# during the link phase because it has full access to the code.
-#
-LDFLAGS="${LDFLAGS} -Wl,--lto-whole-program-visibility"
