--- a/toolchain-llvm/cxxflags.conf
+++ b/toolchain-llvm/cxxflags.conf
@@ -3,17 +3,8 @@
 #
 CXXFLAGS="${CFLAGS} -fstrict-vtable-pointers"
 
-# Remove dead virtual functions from vtables so that CGProfile metadata gets
-# cleaned up correctly. It can only be used with full LTO because it needs to
-# see every call to llvm.type.checked.load in the linkage unit, which ThinLTO
-# doesn't support currently.
-#
-# This requires -fwhole-program-vtables to function, which also requires -flto.
-#
-CXXFLAGS="${CFLAGS} -fvirtual-function-elimination"
-
 # Make inlines hidden during compile time. When paired with -flto and
 # -Wl,--lto-whole-program-visibility, hidden inlines become visible during LTO
 # for better optimization.
 #
-CXXFLAGS="${CFLAGS} -fvisibility-inlines-hidden"
+CXXFLAGS="${CXXFLAGS} -fvisibility-inlines-hidden"
