--- a/toolchain-llvm/cxxflags.conf
+++ b/toolchain-llvm/cxxflags.conf
@@ -3,8 +3,7 @@
 #
 CXXFLAGS="${CFLAGS} -fstrict-vtable-pointers"
 
-# Make inlines hidden during compile time. When paired with -flto and
-# -Wl,--lto-whole-program-visibility, hidden inlines become visible during LTO
-# for better optimization.
+# Make inlines hidden during compile time. When paired with -flto hidden
+# inlines become visible during LTO for better optimization.
 #
 CXXFLAGS="${CXXFLAGS} -fvisibility-inlines-hidden"
