--- a/toolchain-llvm/llvm.conf
+++ b/toolchain-llvm/llvm.conf
@@ -46,3 +46,7 @@ STRINGS="llvm-strings"
 # Replaces GNU's Object stripping tool, strip.
 #
 STRIP="llvm-strip"
+
+# Replaces libstdc++ with libc++ in Rust
+#
+CXXSTDLIB="c++"
