--- a/toolchain-llvm/cflags.conf
+++ b/toolchain-llvm/cflags.conf
@@ -116,7 +116,7 @@ CFLAGS="${CFLAGS} -fveclib=libmvec"
 #
 # This requires -fwhole-program-vtables to function, which also requires -flto.
 #
-CXXFLAGS="${CXXFLAGS} -fvirtual-function-elimination"
+CFLAGS="${CFLAGS} -fvirtual-function-elimination"
 
 # Enable whole-program vtable optimizations for classes with hidden LTO
 # visibility. This flag requires -flto.
