--- a/make.conf
+++ b/make.conf
@@ -1,11 +1,15 @@
 # Start overrides. Copy & paste this to the top of your /etc/portage/make.conf
-# Comment to disable sources you don't want to use.
 
+# Comment to disable sources you don't want to use.
 source toolchain-llvm/clang.conf
 source toolchain-llvm/cflags.conf
 source toolchain-llvm/cppflags.conf
 source toolchain-llvm/cxxflags.conf
 source toolchain-llvm/ldflags.conf
 source toolchain-llvm/llvm.conf
+
+# LLVM targets are now being globally forced but profile/package.use.force has
+# overrides for user control once again.
+LLVM_TARGETS=""
 
 # End of overrides, your normal settings go below here.
