--- a/env/sys-libs/libcxx.conf
+++ b/env/sys-libs/libcxx.conf
@@ -1,8 +1,6 @@
-# issues with -Wl,-Bsymbolic
-#  use -Wl,-Bsymbolic-functions
-# issues with -Wl,-Bsymbolic-functions
-# issues with -rtlib=compiler-rt
-#  use workaround -lm
+# test phase fails
+#  more with -Wl,-Bsymbolic
+#   use -Wl,-Bsymbolic-functions
 #
 CFLAGS="-march=native -O3 -pipe"
 CFLAGS="${CFLAGS} -fcf-protection=none"
@@ -27,7 +25,7 @@ CXXFLAGS="${CFLAGS}"
 CXXFLAGS="${CXXFLAGS} -fstrict-vtable-pointers"
 CXXFLAGS="${CXXFLAGS} -fvisibility-inlines-hidden"
 LDFLAGS=""
-#LDFLAGS="${LDFLAGS} -Wl,-Bsymbolic-functions"
+LDFLAGS="${LDFLAGS} -Wl,-Bsymbolic-functions"
 LDFLAGS="${LDFLAGS} -Wl,-O2"
 LDFLAGS="${LDFLAGS} -Wl,-z,now"
 LDFLAGS="${LDFLAGS} -Wl,-z,relro"
@@ -38,10 +36,9 @@ LDFLAGS="${LDFLAGS} -Wl,--lto-O3"
 # sandboxing
 #FEATURES="${FEATURES} -ipc-sandbox -network-sandbox -pid-sandbox -sandbox -userfetch -userpriv -usersandbox -usersync"
 # testing
-#FEATURES="${FEATURES} -test"
+FEATURES="${FEATURES} -test"
 # workarounds
 #CFLAGS="${CFLAGS} -ftrapping-math"
-LDFLAGS="${LDFLAGS} -lm"
 #LDFLAGS="${LDFLAGS} -fuse-ld=bfd"
 #LDFLAGS="${LDFLAGS} -rtlib=libgcc -unwindlib=libgcc"
 #LDFLAGS="${LDFLAGS} -stdlib=libstdc++"
