--- a/toolchain-llvm/cxxflags.conf
+++ b/toolchain-llvm/cxxflags.conf
@@ -7,3 +7,9 @@ CXXFLAGS="${CFLAGS} -fstrict-vtable-pointers"
 # inlines become visible during LTO for better optimization.
 #
 CXXFLAGS="${CXXFLAGS} -fvisibility-inlines-hidden"
+
+# Use LLVM's implementation of the C++ standard, libc++ instead of GCC's
+# implementation of it, libstdc++. libc++ focuses on C++ standards correctness,
+# some ABI compatibility with GCC's, and performance.
+#
+CXXFLAGS="${CXXFLAGS} -stdlib=libc++"
