--- a/toolchain-llvm/ldflags.conf
+++ b/toolchain-llvm/ldflags.conf
@@ -1,7 +1,25 @@
+# Use LLVM's LLD linker over GNU Binutils' BFD linker. It's faster, has more
+# features and optimizations, and integrates better with Clang than BFD does.
+# You can use go back to BFD by changing the string to bfd or unsetting the
+# flag if you haven't set Clang's USE flag to default-lld.
+#
+LDFLAGS="-fuse-ld=lld"
+
+# Use Clang's compiler-rt runtime libraries instead of GCC's libgcc runtime
+# library. You can go back to the GCC runtime by changing the string to libgcc
+# or unsetting the flag if you haven't set Clang's USE flag to
+# default-compiler-rt
+#
+LDFLAGS="${LDFLAGS} -rtlib=compiler-rt"
+
+# Use LLVM's libunwind instead of GCC's libgcc.
+#
+LDFLAGS="${LDFLAGS} -unwindlib=libunwind"
+
 # Bind default visibility defined symbols (or functions) locally for shared
 # code. Use -Wl,-Bsymbolic-non-weak-functions when this causes issues.
 #
-LDFLAGS="-Wl,-Bsymbolic-functions"
+LDFLAGS="${LDFLAGS} -Wl,-Bsymbolic-functions"
 
 # Use zlib to compress the final code output. There are 2 useful levels: level
 # 1 and level 2. Level 0 obviously disables size optimization. Level 1 is
