--- a/make.conf
+++ b/make.conf
@@ -1,15 +1,18 @@
 # Start overrides. Copy & paste this to the top of your /etc/portage/make.conf
 
 # Comment to disable sources you don't want to use.
-source toolchain-llvm/clang.conf
-source toolchain-llvm/cflags.conf
-source toolchain-llvm/cppflags.conf
-source toolchain-llvm/cxxflags.conf
-source toolchain-llvm/ldflags.conf
-source toolchain-llvm/llvm.conf
+	source toolchain-llvm/clang.conf
+	source toolchain-llvm/cflags.conf
+	source toolchain-llvm/cppflags.conf
+	source toolchain-llvm/cxxflags.conf
+	source toolchain-llvm/ldflags.conf
+	source toolchain-llvm/llvm.conf
 
-# LLVM targets are now being globally forced but profile/package.use.force has
-# overrides for user control once again.
-LLVM_TARGETS=""
+# Turn on diagnostics features to catch bad things. This must be set after all
+# *FLAGS otherwise you will get failures. Comment to disable.
+	source toolchain-llvm/diagnostics.conf
+
+# LLVM targets
+	LLVM_TARGETS="BPF NVPTX X86"
 
 # End of overrides, your normal settings go below here.
