--- a/toolchain-llvm/cflags.conf
+++ b/toolchain-llvm/cflags.conf
@@ -53,8 +53,8 @@
 	CFLAGS="${CFLAGS} -fno-plt"
 
 # Sanitizers cause memory and CPU overhead that we don't want. This turns off
-# any sanitizers in case any are turned on by default. You can't turn them all
-# on at once, but you can disable them all at once with this mighty flag.
+# any sanitizers in case any are turned on by default. It's possible to disable
+# all sanitizers at once with this mighty flag.
 	CFLAGS="${CFLAGS} -fno-sanitize=all"
 
 # For shared code ELF allows interposing of symbols by the dynamic linker. This
