--- a/toolchain-llvm/ldflags.conf
+++ b/toolchain-llvm/ldflags.conf
@@ -1,13 +1,12 @@
 # Use LLVM's LLD linker over GNU Binutils' BFD linker. It's faster, has more
 # features and optimizations, and integrates better with Clang than BFD does.
-# You can use go back to BFD by changing the string to bfd or unsetting the
-# flag if you haven't set Clang's USE flag to default-lld.
+# Fall back to BFD by changing the string to bfd or unsetting the flag if
+# clang-common[default-lld] hasn't been set.
 	LDFLAGS="-fuse-ld=lld"
 
 # Use Clang's compiler-rt runtime libraries instead of GCC's libgcc runtime
-# library. You can go back to the GCC runtime by changing the string to libgcc
-# or unsetting the flag if you haven't set Clang's USE flag to
-# default-compiler-rt
+# library. Fall back to the GCC runtime by changing the string to libgcc
+# or unsetting the flag if clang-common[default-compiler-rt] hasn't been set.
 	LDFLAGS="${LDFLAGS} -rtlib=compiler-rt"
 
 # Use LLVM's libunwind instead of GCC's libgcc.
@@ -27,17 +26,16 @@
 	LDFLAGS="${LDFLAGS} -Wl,--icf=all"
 
 # Sets the linker optimization pipeline level during link-time. There are 4
-# levels: level 0, level 1, level 2, and level 3. Level 3 is the maximum level,
-# you can't rice beyond it. This option adds more passes and makes some passes
-# more aggressive.
+# levels: level 0, level 1, level 2, and level 3. This option adds more passes
+# and makes some passes more aggressive.
 	LDFLAGS="${LDFLAGS} -Wl,--lto-O3"
 
 # Asserts that the link-time optimization link has whole program visibility.
 	LDFLAGS="${LDFLAGS} -Wl,--lto-whole-program-visibility"
 
 # Sets the amount of threads the linker can use. By default, LLD already runs
-# in threaded mode equal to the amount of processor cores in your system. Use
-# the --threads flag to limit the linker's thread count.
+# in threaded mode equal to the amount of processor cores available. Use the
+# --threads flag to limit the linker's thread count.
 	LDFLAGS="${LDFLAGS} -Wl,--threads=8"
 
 # Use zlib to compress the final code output. There are 2 useful levels: level
