--- a/toolchain-llvm/llvm.conf
+++ b/toolchain-llvm/llvm.conf
@@ -1,8 +1,8 @@
 # Replaces GNU's address translator, addr2line.
 	ADDR2LINE=llvm-addr2line
 
-# Replaces GNU's archiver, ar. You can control its behavior with ARFLAGS, but
-# only if it's directly called.
+# Replaces GNU's archiver, ar. Control its behavior with ARFLAGS, but only if
+# it's directly called.
 	AR=llvm-ar
 
 # Replaces GNU's assembler, as.
@@ -14,10 +14,10 @@
 # Replaces GNU's test coverage tool, gcov.
 	GCOV=llvm-cov
 
-# Replaces GNU's linker, BFD. You can control its behavior with LDFLAGS when
-# indirectly called via the compiler. This only reports the name of the linker
-# being used, not forcing LLD over BFD. Since we set LLD as the Clang default
-# with USE flags or -fuse-ld=lld, this will output the proper linker used during
+# Replaces GNU's linker, BFD. Control its behavior with LDFLAGS when indirectly
+# called via the compiler. This only reports the name of the linker being used,
+# not forcing LLD over BFD. Since we set LLD as the Clang default with USE
+# flags or -fuse-ld=lld, this will output the proper linker used during
 # configure phase checks.
 	LD=ld.lld
 
